# eml-neuron

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: phase1_depth_difficulty.py  phase1_gd_recovery.py  phase1_routing_signal.py  phase1_single_node.py  phase1_structural_analysis.py
src/eml_neuron/: __init__.py  exhaustive.py  node.py  symbolic.py  train.py
tests/: test_node.py
