[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eml-neuron"
version = "0.1.0"
description = "Exact neural networks via the Exp-Minus-Log operator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "sympy>=1.12",
    "mpmath>=1.3.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
